<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.yzly</groupId>
    <artifactId>yunze-hotel</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <modules>
        <module>hotel-admin</module>
        <module>hotel-api</module>
        <module>hotel-core</module>
        <module>hotel-job-admin</module>
        <module>hotel-job-core</module>
        <module>hotel-job-executor</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <maven.test.skip>true</maven.test.skip>

        <spring.version>4.3.24.RELEASE</spring.version>
        <spring-boot.version>1.5.21.RELEASE</spring-boot.version>
        <mybatis-spring-boot-starter.version>1.3.4</mybatis-spring-boot-starter.version>
        <mysql-connector-java.version>5.1.47</mysql-connector-java.version>

        <slf4j-api.version>1.7.26</slf4j-api.version>
        <junit.version>4.12</junit.version>

        <commons-exec.version>1.3</commons-exec.version>

        <groovy.version>2.5.7</groovy.version>

        <xxl-rpc.version>1.4.1</xxl-rpc.version>

        <spring-cloud.version>Dalston.SR1</spring-cloud.version>
    </properties>


</project>